--- a/org.modelexecution.xmof.animation/plugin.xml
+++ b/org.modelexecution.xmof.animation/plugin.xml
@@ -22,6 +22,18 @@
             id="org.xmof.addontest.AddonGroup1">
       </AddonGroup>
    </extension>
+   <extension
+         point="org.modelexecution.xmof.diagram.DecorationProvider">
+      <decoratorProvider
+            decoratorProviderClass="org.modelexecution.xmof.diagram.decorator.provider.NodeDecorator">
+      </decoratorProvider>
+   </extension>
+   <extension
+         point="org.modelexecution.xmof.diagram.DecorationProvider">
+      <decoratorProvider
+            decoratorProviderClass="org.modelexecution.xmof.diagram.decorator.provider.NodeDecorator">
+      </decoratorProvider>
+   </extension>
 
 
 </plugin>
