--- a/org.modelexecution.xmof.animation/plugin.xml
+++ b/org.modelexecution.xmof.animation/plugin.xml
@@ -25,13 +25,7 @@
    <extension
          point="org.modelexecution.xmof.diagram.DecorationProvider">
       <decoratorProvider
-            decoratorProviderClass="org.modelexecution.xmof.animation.decorator.provider.NodeDecorator">
-      </decoratorProvider>
-   </extension>
-   <extension
-         point="org.modelexecution.xmof.diagram.DecorationProvider">
-      <decoratorProvider
-            decoratorProviderClass="org.modelexecution.xmof.animation.decorator.provider.NodeDecorator">
+            decoratorProviderClass="org.modelexecution.xmof.animation.decorator.provider.NodeDecoratorProvider">
       </decoratorProvider>
    </extension>
 
