--- a/org.modelexecution.xmof.animation/plugin.xml
+++ b/org.modelexecution.xmof.animation/plugin.xml
@@ -28,6 +28,23 @@
             decoratorProviderClass="org.modelexecution.xmof.animation.decorator.provider.NodeDecoratorProvider">
       </decoratorProvider>
    </extension>
+   <extension
+         point="org.eclipse.debug.core.launchConfigurationTypes">
+      <launchConfigurationType
+            delegate="org.modelexecution.xmof.animation.launcher.LauncherAnim"
+            id="org.modelexecution.xmof.gemoc.animation.launcheranim"
+            modes="run, debug"
+            name="Gemoc XMOF Animated Model">
+      </launchConfigurationType>
+   </extension>
+   <extension
+         point="org.eclipse.debug.ui.launchConfigurationTabGroups">
+      <launchConfigurationTabGroup
+            class="org.modelexecution.xmof.gemoc.engine.ui.launcher.LauncherTabGroup"
+            id="org.xmof.execution.engine.ui.launcher.tabGroupAnim"
+            type="org.modelexecution.xmof.gemoc.animation.launcheranim">
+      </launchConfigurationTabGroup>
+   </extension>
 
 
 </plugin>
