--- a/examples/petrinet/modelling_workbench/org.modelexecution.xmof.examples.petrinet.xmof.sirius/.project
+++ b/examples/petrinet/modelling_workbench/org.modelexecution.xmof.examples.petrinet.xmof.sirius/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.modelexecution.xmof.sirius.design.test</name>
+	<name>org.modelexecution.xmof.examples.petrinet.xmof.sirius</name>
 	<comment></comment>
 	<projects>
 	</projects>
