--- a/examples/petrinet2/language_workbench/org.modelexecution.xmof.examples.petrinet2.xmof.dynamic/.project
+++ b/examples/petrinet2/language_workbench/org.modelexecution.xmof.examples.petrinet2.xmof.dynamic/.project
@@ -17,6 +17,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.eclipse.sirius.nature.modelingproject</nature>
 		<nature>org.eclipse.pde.PluginNature</nature>
 	</natures>
 </projectDescription>
